--- a/less/myCustomMixens.less
+++ b/less/myCustomMixens.less
@@ -1,13 +1,9 @@
 /*	set of properties that can be reused for different rulesets by being imported into different projects	*/
 
 
-.rounded-corners(@radius: 5px;) {
-	border-radius: @radius;
-}
-
 /*	MIXEN WITH PARAMETER AND DEFAULT VALUE	*/
 .colored-and-rounded(@background-color: green) {
-	.rounded-corners();
+	.border-radius();
 	background-color: @background-color;
 	color: contrast(@background-color);
 }
