--- a/less/project.less
+++ b/less/project.less
@@ -112,7 +112,7 @@ textarea {
    ========================================================================== */
 
 html, body{
-	font-family: @main-font;
+	#Font-family > .SansSerif;   /*	 nested mixins inside a ruleset with a #namespace  */
 }
 
 
