Added Background Cover CSS3 to Less Mixens

--- a/less/preboot.less
+++ b/less/preboot.less
@@ -149,6 +149,13 @@
   }
 }
 
+// Background Cover
+.background-cover() {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
 
 // Box sizing
 .box-sizing(@box-model) {
