--- a/less/preboot.less
+++ b/less/preboot.less
@@ -132,19 +132,19 @@
   .Serif (@weight: normal, @size: 14px, @lineHeight: 20px) {
     font-family: Georgia, "Times New Roman", Times, serif;
     font-weight: @weight;
-    font-size: @size;       
+    font-size: @size;
     line-height: @lineHeight;
   }
-  .SansSerif (@weight: normal, @size: 14px, @lineHeight: 20px) { 
+  .SansSerif (@weight: normal, @size: 14px, @lineHeight: 20px) {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: @weight;
-    font-size: @size;       
+    font-size: @size;
     line-height: @lineHeight;
   }
   .Monospace (@weight: normal, @size: 14px, @lineHeight: 20px) {
     font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
     font-weight: @weight;
-    font-size: @size;       
+    font-size: @size;
     line-height: @lineHeight;
   }
 }
@@ -169,7 +169,7 @@
 	-webkit-border-radius: @radius;
     -moz-border-radius: @radius;
     border-radius: @radius;
-	
+
 	/* Prevent background color leak outs */
 	-moz-background-clip:    padding;
 	-webkit-background-clip: padding-box;
@@ -180,7 +180,7 @@
     -webkit-border-radius: @arguments;
     -moz-border-radius: @arguments;
     border-radius: @arguments;
-	
+
 	/* Prevent background color leak outs */
 	-moz-background-clip:    padding;
 	-webkit-background-clip: padding-box;
@@ -211,6 +211,23 @@
                  0 5px 10px rgba(0,0,0,.25),
                  0 10px 10px rgba(0,0,0,.2),
                  0 20px 20px rgba(0,0,0,.15);
+}
+
+/*  INTERESTING GLOW EFFECT  */
+.glow(){
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    text-decoration: normal;
+    text-align: center;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    white-space: pre;
+    text-shadow: 0 0 10px rgba(52, 221, 221, 1) , 0 0 20px rgba(52, 221, 221, 1) , 0 0 30px rgba(52, 221, 221, 1) , 0 0 40px #34DDDD , 0 0 70px #34DDDD , 0 0 80px #34DDDD , 0 0 100px #34DDDD;
+    -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 // Transitions
